[package]
name = "libturnstile"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Seccomp-unotify access tracer and namespace-based sandboxing library"
repository = "https://github.com/micromaomao/libturnstile"
autobins = false

[dependencies]
libc = "0.2.182"
libseccomp = "0.4.0"
libseccomp-sys = "0.3.0"
log = "0.4.29"
page_size = "0.6.0"
thiserror = "2.0.18"
smallvec = "1.15.1"
clap = { version = "4.5.60", features = ["derive"], optional = true }
env_logger = { version = "0.11.9", optional = true }

[features]
default = []
tools = ["clap", "env_logger"]

[[bin]]
name = "fstrace"
path = "src/bin/fstrace.rs"
required-features = ["tools"]

[[bin]]
name = "turnstile-sandbox"
path = "src/bin/turnstile-sandbox.rs"
required-features = ["tools"]
